# bookspine

./: .bandit  .env  .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .secrets.baseline  .trunkignore  .yamllint  AGENTS.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STATUS.md  README.md  RESTRUCTURING_SUMMARY.md  TEST_SPLITTING_SUMMARY.md  cleanup.py  env.example  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: ci.yaml  dependency-update.yaml  release.yaml  security.yaml  tests.yml
.kiro/specs/: baseline-requirements.md
.kiro/specs/book-spine-calculator/: design.md  requirements.md  tasks.md
.kiro/specs/keyword-theme-extraction/: design.md  requirements.md  tasks.md
docs/: INSTALL.md  TODO.md
docs/developer/: CONTRIBUTING.md  TESTING.md
docs/user/: keyword_extraction.md
examples/: advanced_usage.py  basic_usage.py  kte_config_example.json  sample_book.md
scripts/: README.md  check_pydantic_v1.py  check_shell_scripts.sh  config.py  download_models.py  setup_dev.sh  update-stubs.py
src/bookspine/: README.md  __init__.py  cli.py  pyproject.toml
src/bookspine/config/: __init__.py  config_loader.py
src/bookspine/config/printer_services/: default.json  kdp.json  lulu.json
src/bookspine/core/: __init__.py  calculator.py  pdf_processor.py  unit_converter.py
src/bookspine/models/: __init__.py  book_metadata.py  spine_result.py
src/bookspine/scripts/: test_cli_validation.py
src/bookspine/tests/integration/: __init__.py  test_cli_integration.py  test_end_to_end.py  test_performance.py
src/bookspine/tests/resources/: sample.txt
src/bookspine/tests/unit/: test_book_metadata.py  test_calculator.py  test_config_loader.py  test_pdf_processor.py  test_pdf_resources.py  test_printer_service_configs.py  test_spine_result.py  test_unit_converter.py
src/bookspine/utils/: __init__.py  formatters.py
src/kte/: README.md  __init__.py  cli.py  pyproject.toml
src/kte/core/: __init__.py  extractor.py  header_weighting.py  input_handler.py  keybert_extractor.py  output_handler.py  result_formatter.py  universal_embedder.py
src/kte/models/: __init__.py  extraction_options.py  extraction_result.py  keyword_result.py
src/kte/scripts/: download_models.py
src/kte/tests/integration/: test_integration.py
src/kte/tests/unit/: __init__.py  test_core_components.py  test_kte_resources.py  test_models.py  test_performance.py
src/kte/utils/: __init__.py  file_utils.py  text_preprocessor.py
stubs/keybert/: __init__.pyi  _highlight.pyi  _llm.pyi  _maxsum.pyi  _mmr.pyi  _model.pyi  _utils.pyi
stubs/keybert/backend/: __init__.pyi  _base.pyi  _flair.pyi  _gensim.pyi  _hftransformers.pyi  _model2vec.pyi  _sentencetransformers.pyi  _spacy.pyi  _use.pyi  _utils.pyi
stubs/keybert/llm/: __init__.pyi  _base.pyi  _cohere.pyi  _langchain.pyi  _litellm.pyi  _openai.pyi  _textgeneration.pyi  _textgenerationinference.pyi  _utils.pyi
stubs/pypdf/: __init__.pyi  _cmap.pyi  _doc_common.pyi  _encryption.pyi  _merger.pyi  _page.pyi  _page_labels.pyi  _protocols.pyi  _reader.pyi  _utils.pyi  _writer.pyi  _xobj_image_helpers.pyi  constants.pyi  errors.pyi  filters.pyi  pagerange.pyi  papersizes.pyi  types.pyi  xmp.pyi
stubs/pypdf/_codecs/: __init__.pyi  _codecs.pyi  adobe_glyphs.pyi  pdfdoc.pyi  std.pyi  symbol.pyi  zapfding.pyi
stubs/pypdf/_crypt_providers/: __init__.pyi  _base.pyi  _cryptography.pyi  _fallback.pyi  _pycryptodome.pyi
stubs/pypdf/_text_extraction/: __init__.pyi  _text_extractor.pyi
stubs/pypdf/_text_extraction/_layout_mode/: __init__.pyi  _fixed_width_page.pyi  _font.pyi  _font_widths.pyi  _text_state_manager.pyi  _text_state_params.pyi
stubs/pypdf/annotations/: __init__.pyi  _base.pyi  _markup_annotations.pyi  _non_markup_annotations.pyi
stubs/pypdf/generic/: __init__.pyi  _base.pyi  _data_structures.pyi  _files.pyi  _fit.pyi  _image_inline.pyi  _link.pyi  _outline.pyi  _rectangle.pyi  _utils.pyi  _viewerpref.pyi
tests/: TEST_DOCUMENTATION.md  __init__.py  run_tests.py  test.sh  test_config.py  test_utils.py  utils_test_lib.py
tests/kte/: __init__.py
tests/kte/integration/: __init__.py  test_integration.py
tests/kte/unit/: test_cli.py  test_core_components.py  test_kte_resources.py  test_models.py  test_performance.py
tests/resources/: kte_sample.md  test.txt
tests/spine/: __init__.py
tests/spine/integration/: test_cli_integration.py  test_end_to_end.py  test_performance.py
tests/spine/unit/: __init__.py  test_book_metadata.py  test_calculator.py  test_cli.py  test_config_loader.py  test_pdf_processor.py  test_pdf_resources.py  test_printer_service_configs.py  test_spine_result.py  test_unit_converter.py
tests/tests/: conftest.py
